# auto-insurance-claim-processor

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt  streamlit_app.py  workflow.py
data/: alice-declarations.md  alice.json  john-declarations.md  john.json
